Fix overflow error & Modify links for services

--- a/src/components/views/ServicesPage/ServicePage.module.scss
+++ b/src/components/views/ServicesPage/ServicePage.module.scss
@@ -6,8 +6,10 @@
   .servicePageHeader {
     margin-top: 15vh;
   }
+  .serviceSection {
+    width: 100%;
+  }
 }
-
 
 /* ExtraExtraLarge Devices, UltraWide Desktops  */
 @media (min-width: 1921px) {
